sửa lỗi login đăng kí